# ptychodistrib

./: .gitignore  README.md  ptychodistrib_admm.ipynb  setup.py
src/cuda/: CMakeLists.txt
src/ptychodistrib/: __init__.py  solver_ptycho.py
tests/: test_ptycho.py  test_ptycho_admm.py  test_ptycho_grad.py
tests/data/: object_amp.tiff  object_angle.tiff  probe_amp.tiff  probe_angle.tiff  scan.npy
tests/data/rec_admm/: object_amp.tiff  object_angle.tiff
tests/rec_admm/: object_amp.tiff  object_angle.tiff
